<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/welcome_message" />
    <Button
        android:id="@+id/btn_new_invoice"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/new_invoice"
        android:textAllCaps="false"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/btn_list_invoice"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:textAllCaps="false"
        android:text="@string/invoice_list"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
         />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />


</androidx.constraintlayout.widget.ConstraintLayout>