<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_code"
        android:layout_width="100dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/code"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        app:errorContentDescription="Debe ingresar una descripcion"
        app:layout_constraintStart_toEndOf="@id/et_code"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_price"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        app:errorContentDescription="Debe ingresar el precio"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/et_code">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>
   <ImageButton
       android:id="@+id/btn_minus"
       android:layout_width="wrap_content"
       android:layout_marginStart="20dp"
       android:src="@drawable/ic_remove_black_24dp"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toEndOf="@id/et_price"
       app:layout_constraintTop_toTopOf="@id/et_price"
       app:layout_constraintBottom_toBottomOf="@id/et_price"/>
   <EditText
       android:id="@+id/et_quantity"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="number"
       android:maxLength="3"
       app:layout_constraintStart_toEndOf="@id/btn_minus"
       android:text="@string/_0"
       app:layout_constraintTop_toTopOf="@id/btn_minus"
       app:layout_constraintBottom_toBottomOf="@id/btn_minus" />
    <ImageButton
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_black_24dp"
        app:layout_constraintStart_toEndOf="@id/et_quantity"
        app:layout_constraintTop_toTopOf="@id/et_quantity"
        app:layout_constraintBottom_toBottomOf="@id/et_quantity"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_shopping_cart_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_plus"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:id="@+id/btn_add_to_cart"
        app:layout_constraintTop_toTopOf="@+id/btn_plus"
        app:layout_constraintVertical_bias="0.0" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:id="@+id/rv_products"
        app:layout_constraintTop_toBottomOf="@+id/et_price"
        app:layout_constraintBottom_toTopOf="@id/tv_subtotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/subtotal"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <TextView
        android:id="@+id/tv_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

</androidx.constraintlayout.widget.ConstraintLayout>