<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Nombre del emisor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Rif del emisor"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_rif"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Cliente: NOMBRE DEL CLIENTE"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_rif"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_client"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="CI: CEDULA DEL CLEINTE"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_client"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_identifier"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invoice"
       app:layout_constraintTop_toBottomOf="@+id/tv_identifier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_recipe"
        android:layout_marginTop="20dp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/tv_subtotal"
        app:layout_constraintTop_toBottomOf="@id/tv_recipe"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/subtotal"
        android:id="@+id/tv_sub"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_finish" />
    <TextView
        android:id="@+id/tv_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_finish"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_finish"
        android:text="@string/finish"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_check"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/checkmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/invoice_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_rif,tv_sub,rv_products,btn_finish,tv_subtotal,tv_client,tv_client,tv_identifier, tv_name, tv_recipe"
        />
</androidx.constraintlayout.widget.ConstraintLayout>